@@ -1,3 +1,14 @@
+2011-11-16  Ryosuke Niwa  <rniwa@webkit.org>
+
+        Refactor ChangeLogTest.test_parse_reviewer_text
+        https://bugs.webkit.org/show_bug.cgi?id=72572
+
+        Reviewed by Eric Seidel.
+
+        Refactored the test code by introduing two helper functions.
+
+        * Scripts/webkitpy/common/checkout/changelog_unittest.py:
+
 2011-11-16  Eric Seidel  <eric@webkit.org>
 
         Add SCMDetector object to make scm detection mockable
